--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body, html {
 .menu a {
     text-decoration: none;
     color: #333;
-    margin: 0 10px; /* Reduce margin */
+    margin: 0 5px; /* Reduce margin */
     font-size: 36px;
     transition: color 0.3s;
 }
@@ -35,7 +35,7 @@ body, html {
 .logo {
     width: 175px;
     height: 175px;
-    margin: 0 10px; /* Reduce margin */
+    margin: 0 5px; /* Reduce margin */
     vertical-align: middle;
 }
 
@@ -84,12 +84,15 @@ body, html {
     margin: 0 auto;
     border-collapse: collapse;
     margin-top: 20px;
+    table-layout: auto; /* Allow the table to adjust its layout */
+    overflow-x: auto; /* Enable horizontal scrolling if necessary */
 }
 
 .events-table th, .events-table td, .history-table th, .history-table td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: center;
+    word-wrap: break-word; /* Ensure long words break to fit the cell */
 }
 
 .events-table th, .history-table th {
@@ -109,12 +112,12 @@ body, html {
 /* Responsive adjustments */
 @media (max-width: 768px) {
     .menu a {
-        font-size: 18px; /* Further reduce font size */
+        font-size: 16px; /* Further reduce font size */
     }
 
     .logo {
-        width: 100px;
-        height: 100px;
+        width: 190px;
+        height: 190px;
     }
 
     .section h2 {
@@ -122,18 +125,18 @@ body, html {
     }
 
     .separator {
-        font-size: 18px; /* Reduce separator size */
+        font-size: 16px; /* Reduce separator size */
     }
 }
 
 @media (max-width: 480px) {
     .menu a {
-        font-size: 14px; /* Further reduce font size */
+        font-size: 12px; /* Further reduce font size */
     }
 
     .logo {
-        width: 80px;
-        height: 80px;
+        width: 170px;
+        height: 170px;
     }
 
     .section h2 {
